--- a/0.start/0.md
+++ b/0.start/0.md
@@ -66,7 +66,7 @@ document.body.appendChild( renderer.domElement );
 (`BoxGeometry`는 큐브의 모든 점 ( 정점 )과  면을 포함하는 오브젝트)
 
 ```jsx
-const geometr* = new THREE.BoxGeometry();
+const geometr = new THREE.BoxGeometry();
 ```
 
 - Three.js에는 여러 가지 재질이 있다.( MeshBasicMaterial 등 )
