--- a/2.fundamental_2/2.fundamental_2.md
+++ b/2.fundamental_2/2.fundamental_2.md
@@ -38,7 +38,7 @@
 
 - `이런!` 화면 높이를 변경하니 콘텐츠도 같이 세로로 늘어나고 확대하면 콘텐츠가 깨진다!!ㅜ
 
-[https://codepen.io/kumjungmin/pen/xxOMmae](https://codepen.io/kumjungmin/pen/xxOMmae)
+
 
 ### (2) 창크기가 늘어나면 콘텐츠가 늘어나는 문제
 
@@ -101,4 +101,4 @@ function render(time) {
 
 ### (4) 예시 코드 보기
 
-[https://codepen.io/kumjungmin/pen/rNLPoRo](https://codepen.io/kumjungmin/pen/rNLPoRo)
+<a href="https://codepen.io/kumjungmin/pen/rNLPoRo">three.js와 반응형 디자인</a>
