--- a/2.fundamental_2/2.fundamental_2.md
+++ b/2.fundamental_2/2.fundamental_2.md
@@ -1,11 +1,11 @@
-# Untitled
-
 # 3. what is three.js ? (3)
 
 ## 1) three.js는 어떤 환경에서도 구동이 될까?
 
 - three.js를 반응형으로 만들어 어떤 환경에서도 구동이 가능하다.
 - 반응형이란, pc, 타블렛, 스마트폰 등 다양한 사이즈에 맞춰 콘텐츠를 최적화하는 것을 말한다.
+
+<br/>
 
 ## 2) three.js와 반응형 설정
 
@@ -18,6 +18,9 @@
 ```html
 <canvas id="c"></canvas>
 ```
+
+<br/>
+
 
 - canvas의 기본 display는 inline이다. (글자처럼 취급)
 - canvas가 페이지 전체를 차지하게 변경해보자.
@@ -36,8 +39,14 @@
 </style>
 ```
 
+<br/>
+
+
 - `이런!` 화면 높이를 변경하니 콘텐츠도 같이 세로로 늘어나고 확대하면 콘텐츠가 깨진다!!ㅜ
 
+![Untitled%206047b02b302e4865a23801d89117413f/_2020-11-15.png](Untitled%206047b02b302e4865a23801d89117413f/2020-11-15.png)
+
+<br/>
 
 
 ### (2) 창크기가 늘어나면 콘텐츠가 늘어나는 문제
@@ -55,9 +64,15 @@ function render(time) {
 }
 ```
 
+<br/>
+
+
 - `아니!` 콘텐츠 크기가 일정한 비율로 커지는데, 콘텐츠를 확대하면 깨진다ㅜ!!
 
 ![Untitled%206047b02b302e4865a23801d89117413f/_2020-11-15__3.11.35.png](Untitled%206047b02b302e4865a23801d89117413f/_2020-11-15__3.11.35.png)
+
+<br/>
+
 
 ### (3) 콘텐츠를 확대하면 깨지는 문제(계단문제)
 
@@ -66,9 +81,14 @@ function render(time) {
 - 우리는 `드로잉버퍼(drawingbuffer/해상도)의 크기`를 `canvas의 디스플레이 크기`로 지정하여 해결가능하다.
 - canvas의 원본크기와 디스플레이 크기를 비교하여, 크기가 다르면 true를 반환하는 함수를 사용해보자.
 
-*아니, 귀찮게 크기를 비교하지 말고 계속 드로잉 버퍼의 크기를 변경하면 안되나요?*
+<br/>
 
+
+*아니, 귀찮게 크기를 비교하지 말고 계속 드로잉 버퍼의 크기를 변경하면 안되나요?*
 *안됩니다! canvas의 크기를 변경할 때마다 화면을 다시 랜더링하므로, 계속 변경하게 하면 자원 낭비가 심합니다.ㅜ*
+
+<br/>
+
 
 ```jsx
 // a. resize 함수 생성
@@ -98,6 +118,9 @@ function render(time) {
 	}
 }
 ```
+
+<br/>
+
 
 ### (4) 예시 코드 보기
 
